# miniserve-gui

./: AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: sync-version.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build_help.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  utils.rs
src/components/: ConfigPanel.vue  LogPanel.vue  StatusCard.vue
src/i18n/: en.ts  index.ts  zh-CN.ts
