[package]
name = "miniserve-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "miniserve_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
dirs = "5"
if-addrs = "0.13"
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[profile.release]
strip = true       # 剔除调试信息（最有效，能砍掉 70% 体积）
opt-level = "z"    # 极致体积优化
lto = true         # 全局链接优化
codegen-units = 1  # 牺牲编译速度换取体积优化
panic = "abort"    # 去掉异常回溯代码




